[package]
name = "bejewled-term"
version = "0.0.1"
authors = ["DarkKapla <51818770+DarkKapla@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ncurses = {version = "5.99.0"}
clap = "2.33.3"
