[package]
name = "bejeweled-term"
version = "0.0.1"
authors = ["DarkKapla <51818770+DarkKapla@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ncurses = "5.101.0"
clap = "2.33.3"
ndarray = "0.15.1"
rand = "0.8.3"
