[package]
name = "bejeweled-term"
version = "0.0.1"
authors = ["DarkKapla <51818770+DarkKapla@users.noreply.github.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

ncurses = "*"
ndarray = "*"
rand = "*"
